--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               10);
+		                                  10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                     
-		                              0);
+		                                 0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               25);
+		                                  25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,15 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                     
+	filter: progid :                        
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		         DXImageTransform.Microsoft.AlphaImageLoader (            
+		            DXImageTransform.Microsoft.AlphaImageLoader (
+		              
 		 
 		   
 		      
@@ -1750,7 +1751,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                          src =
+		                                                             src =   
 		        
 		                
 		                                  
@@ -1766,8 +1767,8 @@ p#clear {
 		                      
 		                      
 		                      
-		             '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =       
+		                '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =          
 		 
 		   
 		                
@@ -1787,7 +1788,7 @@ p#clear {
 		   
 		                                                               
 		                                                               
-		'scale' );
+		   'scale' );
 }
 
 .yui-picker-mask {
@@ -1962,11 +1963,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               25);
+		                                  25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2071,11 +2072,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               12);
+		                                  12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2191,11 +2192,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               12);
+		                                  12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2257,11 +2258,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                     
-		                              0);
+		                                 0);
 }
 
 .yui-dt-resizerproxy {
@@ -2270,11 +2271,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                     
-		                              0);
+		                                 0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2370,11 +2371,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               25);
+		                                  25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2761,21 +2762,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2873,11 +2874,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-editor-container iframe {
@@ -3978,11 +3979,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4749,11 +4750,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               12);
+		                                  12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5264,20 +5265,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                     
-		                              0);
+		                                 0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5365,11 +5366,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                       
+	filter: alpha(opacity =                                          
 		                                                         
 		                                                         
 		                                                                   
-		                                 100);
+		                                    100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5625,21 +5626,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5737,11 +5738,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                        
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                    
-		                               50);
+		                                  50);
 }
 
 .yui-editor-container iframe {
@@ -7799,12 +7800,15 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :           
+	filter: progid :              
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                               DXImageTransform.Microsoft.gradient ( 
+		                                  DXImageTransform.Microsoft.gradient
+		( 
+		
+		 
 		    
 		        
 		                  
@@ -7819,7 +7823,9 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                                      startColorstr = 
+		                                                         startColorstr
+		=  
+		 
 		   
 		      
 		              
@@ -7830,7 +7836,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                           "#0000FF", endColorstr =           
+		                              "#0000FF", endColorstr =              
 		                               
 		 
 		  
@@ -7840,7 +7846,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                     "#19558D" );
+		                                        "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8445,11 +8451,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                                       
+	filter: progid : 
+		                                                        
 		                                                        
 		                                   
 		                                   
-		                  DXImageTransform.Microsoft.gradient (  
+		                     DXImageTransform.Microsoft.gradient (     
 		                  
 		
 		 
@@ -8464,7 +8471,8 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                         startColorstr =              
+		                                            startColorstr =  
+		              
 		                             
 		 
 		   
@@ -8472,7 +8480,8 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                       "#A7BBCC", endColorstr =       
+		                                          "#A7BBCC", endColorstr =  
+		       
 		               
 		                               
 		 
@@ -8481,7 +8490,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                          "#879BAD" );
+		                             "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9753,14 +9762,19 @@ a.closed:after {
 
 a.com_link {
 	float: left;
-	/*clear: both;
-	*/
+}
+
+a.com_link,a.com_reply_link {
 	padding: 3px;
 	text-decoration: none;
 	color: #888;
 }
 
-a.com_link:hover {
+div.com_reply {
+	margin-right: 20px;
+}
+
+a.com_link:hover,a.com_reply_link:hover {
 	background-color: #888;
 	color: #FFF;
 }
@@ -10385,4 +10399,10 @@ h2.definition {
 	background-color: #ECEFF6;
 	border: 1px solid #D4DAE8;
 	padding: 10px;
+}
+
+span.inreply {
+	margin-right: 6px;
+	border-bottom: 1px #19558D dotted !important;
+	cursor: pointer;
 }
