--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  10);
+		                                   10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                     
-		                                 0);
+		                                  0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  25);
+		                                   25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                        
+	filter: progid :                         
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		            DXImageTransform.Microsoft.AlphaImageLoader (
+		             DXImageTransform.Microsoft.AlphaImageLoader ( 
 		              
 		 
 		   
@@ -1751,7 +1751,8 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                             src =   
+		                                                              src =
+		   
 		        
 		                
 		                                  
@@ -1767,8 +1768,8 @@ p#clear {
 		                      
 		                      
 		                      
-		                '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =          
+		                 '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =           
 		 
 		   
 		                
@@ -1788,7 +1789,7 @@ p#clear {
 		   
 		                                                               
 		                                                               
-		   'scale' );
+		    'scale' );
 }
 
 .yui-picker-mask {
@@ -1963,11 +1964,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  25);
+		                                   25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2072,11 +2073,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  12);
+		                                   12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2192,11 +2193,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  12);
+		                                   12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2258,11 +2259,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                     
-		                                 0);
+		                                  0);
 }
 
 .yui-dt-resizerproxy {
@@ -2271,11 +2272,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                     
-		                                 0);
+		                                  0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2371,11 +2372,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  25);
+		                                   25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2762,21 +2763,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2874,11 +2875,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-editor-container iframe {
@@ -3979,11 +3980,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4750,11 +4751,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  12);
+		                                   12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5265,20 +5266,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                     
-		                                 0);
+		                                  0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5366,11 +5367,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                          
+	filter: alpha(opacity =                                           
 		                                                         
 		                                                         
 		                                                                   
-		                                    100);
+		                                     100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5626,21 +5627,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5738,11 +5739,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                           
+	filter: alpha(opacity =                                            
 		                                                         
 		                                                         
 		                                                                    
-		                                  50);
+		                                   50);
 }
 
 .yui-editor-container iframe {
@@ -7800,13 +7801,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :              
+	filter: progid :               
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                                  DXImageTransform.Microsoft.gradient
-		( 
+		                                   DXImageTransform.Microsoft.gradient
+		(  
 		
 		 
 		    
@@ -7823,8 +7824,8 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                                         startColorstr
-		=  
+		                                                         
+		startColorstr =   
 		 
 		   
 		      
@@ -7836,7 +7837,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                              "#0000FF", endColorstr =              
+		                               "#0000FF", endColorstr =               
 		                               
 		 
 		  
@@ -7846,7 +7847,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                        "#19558D" );
+		                                         "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8451,12 +8452,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid : 
+	filter: progid :  
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                     DXImageTransform.Microsoft.gradient (     
+		                      DXImageTransform.Microsoft.gradient (      
 		                  
 		
 		 
@@ -8471,7 +8472,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                            startColorstr =  
+		                                             startColorstr =   
 		              
 		                             
 		 
@@ -8480,7 +8481,7 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                          "#A7BBCC", endColorstr =  
+		                                           "#A7BBCC", endColorstr =   
 		       
 		               
 		                               
@@ -8490,7 +8491,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                             "#879BAD" );
+		                              "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8613,7 +8614,6 @@ div.t2 {
 }
 
 div.controls {
-	clear: both;
 	color: #888888;
 	float: left;
 	margin-top: 10px;
@@ -9766,7 +9766,7 @@ a.com_link {
 
 a.com_link,a.com_reply_link {
 	padding: 3px;
-	text-decoration: none;
+	text-decoration: underline;
 	color: #888;
 }
 
@@ -9807,13 +9807,20 @@ div.com_auth {
 	margin-right: 6px;
 }
 
-div.com_tools {
-	padding-left: 60px !important;
+/*div.com_tools {
+	padding-left: 5px !important;
 }
+
+*/
 
 div.com_tools span {
 	float: right;
+	margin-left: 2px;
 }
+
+.com_ts{
+	padding-right: 3px;
+	}
 
 div.com_b {
 	white-space: pre-wrap !important;
@@ -9829,8 +9836,10 @@ a.commentor,a.commentor1 {
 	white-space: nowrap;
 }
 
-a.commentor {
-	border-bottom: 1px #19558D dotted !important;
+a.commentor { /*border-bottom: 1px #19558D dotted !important;
+*/
+	color: #19558D;
+	text-decoration: underline !important;
 }
 
 textarea.com_bo {
@@ -10402,7 +10411,15 @@ h2.definition {
 }
 
 span.inreply {
-	margin-right: 6px;
-	border-bottom: 1px #19558D dotted !important;
+	font-weight: bold;
+	position: relative;
+	float: left;
+	clear: both;
+	margin-bottom: 5px;
+	border-bottom: 1px dotted;
 	cursor: pointer;
+}
+
+.parent_comment,.parent_comment2 {
+	background-color: #E1EAF2;
 }
